Replace deprecated URL constructors